--- a/all/themes/pixelgarage/less/pxlComponents/node-course.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-course.less
@@ -48,7 +48,7 @@
                 width: 100% !important;
                 font-family: @pxl-text-font-medium;
                 font-size: @font-size-small;
-                color: @pxl-color-gray-border;
+                color: @text-color;
                 vertical-align: top;
               }
               td {
