--- a/all/themes/pixelgarage/less/pxlComponents/node-news.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-news.less
@@ -142,7 +142,7 @@
         }
       }
 
-      .field-name-submitted-by {
+      .field-name-post-date {
         margin: 10px 0 20px;
         width: 100%;
 
