--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -120,6 +120,8 @@
       .block-nodeblock {
         // footer node block
         .node-footer.view-mode-full {
+          padding: 0 0 20px;
+
           .row {
             .col-sm-6 {
               .field {
@@ -152,43 +154,28 @@
               .field-name-follow-site {
                 // see block-socials
               }
-            }
-          }
-        }
-      }
 
-      .block-menu-block {
-        // footer menu (level 1)
-        display: block;
-        margin-top: 30px;
-        padding: 30px 0;
-        width: 100%;
-        border-top: 1px solid @pxl-color-gray-text;
+              .field-name-footer-menu {
+                ul.menu {
+                  li {
+                    display: block;
+                    height: 40px;
 
-        .menu-name-menu-footer-menu {
-          ul.menu {
-            text-align: center;
-            li {
-              display: inline-block;
+                    a {
+                      padding: 0 0 2px;
+                      font-family: @pxl-text-font;
+                      font-size: 16px;
+                      color: @pxl-color-gray-text;
+                      background: none;
 
-              a {
-                padding: 0 10px 2px;
-                font-family: @pxl-text-font;
-                font-size: 16px;
-                line-height: 1;
-                color: @pxl-color-gray-text;
-                border-right: 1px solid @pxl-color-gray-border;
-
-                &:hover,
-                &.active {
-                  text-decoration: underline;
-                  background: none;
-                }
-              }
-
-              &.last {
-                a {
-                  border: none;
+                      &:hover,
+                      &.active {
+                        color: #fff;
+                        //text-decoration: underline;
+                        background: none;
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -219,12 +206,13 @@
 
                     div {
                       a {
-                        display: block;
-                        padding: 10px 0;
-                        border-top: 1px solid @text-color;
+                        display: inline-block;
+                        padding: 10px 0 10px 5px;
+                        width: 80%;
 
                         img {
-                          max-width: 100%;
+                          width: 100%;
+                          height: auto;
                         }
                       }
                     }
