--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -47,8 +47,8 @@
       .course-subject {
         // fachgebiet title
         h2 {
-          margin: 30px 0 0;
-          padding: 10px 0;
+          margin: 15px 0 0;
+          padding: 20px 0 24px;
           font-family: @pxl-text-font-medium;
           font-size: @font-size-base + 2;
           color: @text-color;
@@ -68,7 +68,6 @@
           margin-bottom: 0;
           padding: 0;
           font-family: @pxl-text-font-light;
-          color: #fff;
           line-height: 1;
           #pxl-mixins.border-radius(0);
           background: none;
@@ -80,7 +79,7 @@
             a {
               display: block;
               width: 100%;
-              padding: 10px 10px 12px;
+              padding: 9px 10px 11px;
               font-size: 14px;
               color: @pxl-color-gray-text;
               text-decoration: none;
@@ -88,20 +87,24 @@
           }
 
           .short-description {
+            // in Kürze
             display: none;
             position: absolute;
-            top: 5px;
-            right: 5px;
+            top: 0;
+            right: 15px;
             padding: 0;
-            #pxl-mixins.border-radius(3px);
-            border: 1px solid #fff;
 
             a {
-              display: block;
-              padding: 5px 10px 7px;
+              display: inline-block;
+              padding: 9px 10px 11px;
               font-size: 14px;
               color: #fff;
               text-decoration: none;
+            }
+
+            .fa {
+              // caret-down
+              color: #fff;
             }
           }
 
@@ -109,6 +112,7 @@
             .panel-title,
             .short-description {
               a {
+                padding: 9px 10px 10px;
                 font-size: 15px;
               }
             }
@@ -121,7 +125,8 @@
               display: inline-block;
 
               a {
-                font-size: @font-size-base;
+                padding: 7px 10px 9px;
+                font-size: 18px;
               }
             }
           }
@@ -150,8 +155,8 @@
 
         .panel-collapse {
           .panel-body {
-            margin: 10px 40px;
-            padding: 10px 0 20px;
+            margin: 10px 0;
+            padding: 10px 10px 20px;
             font-family: @pxl-text-font-light;
             color: @text-color-light;
             border: none;
