--- a/all/themes/pixelgarage/less/pxlComponents/block-menu-blocks.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-menu-blocks.less
@@ -26,6 +26,10 @@
       display: inline-block;
       margin: 0 5px 5px 0;
 
+      &.navigator {
+        display: none;
+      }
+
       a, span {
         display: block;
         padding: 11px 20px 13px;
@@ -53,6 +57,9 @@
         margin: 0 -3px 0 0;
         border-right: 1px solid #fff;
 
+        &.navigator {
+          display: inline-block;
+        }
         a, span {
           padding: 11px 12px 13px;
           #pxl-mixins.border-radius(0);
