--- a/all/themes/pixelgarage/less/pxlComponents/node-news.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-news.less
@@ -86,6 +86,17 @@
     div.col-sm-12 {
       width: 100%;
 
+      .field-name-field-picture {
+        margin: -20px -20px 20px;
+
+        .field-item {
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
+
       .field-name-title {
         h2 {
           margin-top: 0;
