--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -166,6 +166,7 @@
                       font-family: @pxl-text-font;
                       font-size: 16px;
                       color: @pxl-color-gray-text;
+                      text-align: center;
                       background: none;
 
                       &:hover,
@@ -173,6 +174,10 @@
                         color: #fff;
                         //text-decoration: underline;
                         background: none;
+                      }
+
+                      @media @tablet {
+                        text-align: left;
                       }
                     }
                   }
